--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
    <!-- <h1>Clase 14 - Ejercicio 3</h1>
-    <p>Realiza un script que pida cadenas de texto hasta que se pulse “cancelar”.</p>
+    <p>Realiza un script que pida cadenas de texto hasta que se pulse “cancelar”.</p> what
     <br>
     <p>Al salir con “cancelar” deben mostrarse todas las cadenas concatenadas con un guión.</p>
     <br>
